# school-triangle-orchestrator

./: .replit  DEPLOY.md  README.md  pnpm-lock.yaml  pyproject.toml  replit.md
.agents/: agent_assets_metadata.toml
artifacts/api-server/: .dockerignore  Dockerfile  cloudbuild.yaml  requirements.txt  start.sh
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/app/: database.py  main.py  models.py  schemas.py  seed.py
artifacts/api-server/app/agents/: client.py  parent_communication.py  scheduling.py  student_insight.py  teacher_action.py
artifacts/api-server/app/routes/: health.py  orchestrate.py  schedule.py  students.py
artifacts/demo-video/: index.html
artifacts/demo-video/.replit-artifact/: artifact.toml
artifacts/demo-video/src/: index.css
artifacts/demo-video/src/components/video/: VideoTemplate.tsx
artifacts/demo-video/src/components/video/video_scenes/: Scene1.tsx  Scene2.tsx  Scene3.tsx  Scene4.tsx  Scene5.tsx
attached_assets/: school-triangle-orchestrator_1776058271016.md
lib/api-spec/: openapi.yaml
